@@ -35,15 +35,23 @@ def installGeneralTaskService():
     tasks.processorFactory = lovely.remotetask.processor.MultiProcessor
 
 
-def installEventTaskService():
+def _install_serial_task_service(name, utility_name):
     site_manager = zope.component.getSiteManager()
     tasks = installLocalUtility(
-        site_manager, lovely.remotetask.TaskService, 'tasks.event',
-        lovely.remotetask.interfaces.ITaskService, utility_name='events')
+        site_manager, lovely.remotetask.TaskService, name,
+        lovely.remotetask.interfaces.ITaskService, utility_name=utility_name)
     # Use MultiProcessor with 1 Thread because it handles pulling from the
     # queue differently than the SingleProcessor.
     tasks.processorFactory = lovely.remotetask.processor.MultiProcessor
     tasks.processorArguments = {'maxThreads': 1}
+
+
+def installEventTaskService():
+    _install_serial_task_service('tasks.event', 'events')
+
+
+def installLowPriorityTaskService():
+    _install_serial_task_service('tasks.lowprio', 'lowprio')
 
 
 def installRelations():
@@ -58,7 +66,6 @@ def installRelations():
 
 
 def install(root):
-    site_manager = zope.component.getSiteManager()
     installLocalUtility(
         root, zeit.cms.repository.repository.repositoryFactory,
         'repository', zeit.cms.repository.interfaces.IRepository)
@@ -70,6 +77,7 @@ def install(root):
         'templates', zeit.cms.content.interfaces.ITemplateManagerContainer)
     installGeneralTaskService()
     installEventTaskService()
+    installLowPriorityTaskService()
     installRelations()
 
 
